formatted v spacing for all chapters and corrected sentence syntax

--- a/style/main.css
+++ b/style/main.css
@@ -67,7 +67,7 @@
     font-family: DoubleFeature;
     letter-spacing: 1pt;
     line-height: 110pt;
-    font-size: 100pt;
+    font-size: 85pt;
     color: maroon;
     text-shadow: 0px 0px 15px black;
 }
